--- a/homework_1/homework_1.csproj
+++ b/homework_1/homework_1.csproj
@@ -48,16 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="classes\ImageInfo.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="GalleryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="GalleryForm.Designer.cs">
+      <DependentUpon>GalleryForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="GalleryForm.resx">
+      <DependentUpon>GalleryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
